# TileDB-ML

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  modules.rst  tiledb.ml.models.rst  tiledb.ml.readers.rst  tiledb.ml.rst
example_notebooks/data_apis/: pytorch_data_api_tiledb_dense.ipynb
example_notebooks/models/: pytorch_tiledb_models_example.ipynb  sklearn_tiledb_models_example.ipynb  tensorflow_keras_tiledb_models_example.ipynb
examples/cloud/: create_and_write.py  del.py  info.py  list.py  open.py  pytorch_tiledb_cloud_ml_model_array.ipynb  sklearn_tiledb_cloud_ml_model_array.ipynb  tensorflow_tiledb_cloud_ml_model_array.ipynb
examples/cloud/models/: pytorch_tiledb_cloud_ml_model_array.ipynb  sklearn_tiledb_cloud_ml_model_array.ipynb  tensorflow_tiledb_cloud_ml_model_array.ipynb
examples/cloud/serverless_training/pytorch/: README.md  data_ingestion.py  model_load_and_predict.py  model_training.py
examples/data_apis/: pytorch_data_api_tiledb_dense.ipynb  pytorch_data_api_tiledb_sparse.ipynb  tensorflow_data_api_tiledb_dense.ipynb  tensorflow_data_api_tiledb_sparse.ipynb
examples/models/: pytorch_tiledb_models_example.ipynb  sklearn_tiledb_models_example.ipynb  tensorflow_keras_tiledb_models_example.ipynb
examples/readers/: pytorch_data_api_tiledb_dense.ipynb  pytorch_data_api_tiledb_sparse.ipynb  tensorflow_data_api_tiledb_dense.ipynb  tensorflow_data_api_tiledb_sparse.ipynb
examples/serverless/pytorch/: README.md  data_ingestion.py  model_load_and_predict.py  model_training.py
models/: base_model.py  pytorch_models.py  sklearn_models.py  tensorflow_keras_models.py  tensorflow_models.py
test/: test_models_tensorflow_keras.py  test_pytorch_models.py  test_sklearn_models.py  test_tensorflow_keras_models.py
test/models/: test_tensorflow_keras_models.py
tests/: conftest.py  test_cloud_utils.py  test_pytorch_data_api.py  test_pytorch_dataloader_api.py  test_pytorch_models.py  test_pytorch_sparse_data_api.py  test_pytorch_sparse_dataloader_api.py  test_sklearn_models.py  test_tensorflow_data_api.py  test_tensorflow_keras_models.py  test_tensorflow_sparse_data_api.py  test_utils.py  utils.py
tests/models/: test_cloud_utils.py  test_pytorch_models.py  test_sklearn_models.py  test_tensorflow_keras_models.py
tests/readers/: test_batch_utils.py  test_buffer_utils.py  test_pytorch.py  test_pytorch_collators.py  test_ranges.py  test_tensor_schema.py  test_tensorflow.py  utils.py
tiledb/ml/: __init__.py  _cloud_utils.py  _parallel_utils.py  _utils.py
tiledb/ml/data_apis/: pytorch.py  pytorch_sparse.py  tensorflow.py  tensorflow_sparse.py
tiledb/ml/models/: __init__.py  _array_metadata.py  _base.py  _cloud_utils.py  _file_properties.py  _specs.py  _tensorboard.py  base.py  base_model.py  cloud_utils.py  keras_tensorflow.py  model_list.py  pytorch.py  pytorch_models.py  sklearn.py  sklearn_models.py  tensorflow.py  tensorflow_keras.py  tensorflow_keras_models.py
tiledb/ml/models/tensorflow/: internals.py
tiledb/ml/readers/: __init__.py  _batch_utils.py  _buffer_utils.py  _parallel_utils.py  _pytorch_batch.py  _pytorch_collators.py  _ranges.py  _tensor_gen.py  _tensor_schema.py  _tensorflow_batch.py  _tensorflow_generators.py  pytorch.py  pytorch_sparse.py  tensorflow.py  tensorflow_sparse.py  types.py
tiledb/ml/readers/_tensor_schema/: __init__.py  base.py  base_sparse.py  dense.py  mapped.py  query.py  ragged.py  ranges.py  sparse.py  sparse_to_dense.py
tiledb/ml/readers/types/: typing.py
tiledb/ml/utils/: _parallel_utils.py  helpers.py
