[metadata]
name = tiledb-ml
description = Package supports all machine learning functionality for TileDB Embedded and TileDB Cloud
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = tiledb, ml
url = https://github.com/TileDB-Inc/TileDB-ML
platform = any
project_urls =
    Bug Tracker = https://github.com/TileDB-Inc/TileDB-ML/issues
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.7
test_suite = tests
install_requires = tiledb >= 0.9.2
setup_requires = setuptools_scm <= 6.0.0

[options.extras_require]
tensorflow = tensorflow<=2.5.0;
pytorch = torch>=1.8.1; torchvision>=0.9.1
sklearn = scikit-learn>=0.23.0
tensorflow_cloud = tensorflow<=2.5.0; tiledb-cloud>=0.7.11
pytorch_cloud = torch>=1.8.1; torchvision>=0.9.1; tiledb-cloud>=0.7.11
sklearn_cloud = scikit-learn>=0.23.0; tiledb-cloud>=0.7.11
full = tensorflow<=2.5.0; torch>=1.8.1; torchvision>=0.9.1; scikit-learn>=0.23.0; tiledb-cloud>=0.7.11

[tool:pytest]
addopts = --cov=tiledb --cov-report=term-missing

[aliases]
test=pytest

[flake8]
statistics = true
exclude = .git
ignore = E203, E501, W503, B950
select = B,C,E,F,W,T4,B9
per-file-ignores =
    __init__.py: F401, F403

[mypy]
show_error_codes = True
ignore_missing_imports = True

# Disallow dynamic typing
#disallow_any_decorated = True
#disallow_any_unimported = True
#disallow_any_expr = True
#disallow_any_explicit = True
disallow_any_generics = True
#disallow_subclassing_any = True

# Untyped definitions and calls
# disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

# None and Optional handling
no_implicit_optional = True
strict_optional = True

# Configuring warnings
warn_redundant_casts = True
warn_unused_ignores = False
warn_no_return = True
warn_return_any = True
warn_unreachable = True

# Miscellaneous strictness flags
implicit_reexport = True
strict_equality = True

[mypy-tests.*]
ignore_errors = True
