[metadata]
name = tiledb-ml
description = Package supports all machine learning functionality for TileDB Embedded and TileDB Cloud
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = tiledb, ml
url = https://github.com/TileDB-Inc/TileDB-ML
platform = any
project_urls =
    Bug Tracker = https://github.com/TileDB-Inc/TileDB-ML/issues
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.7
test_suite = tests

[aliases]
test=pytest

[flake8]
statistics = true
exclude = .git
ignore = E203, E501, W503, B950
select = B,C,E,F,W,T4,B9
per-file-ignores =
    __init__.py: F401, F403

[mypy]
# Import discovery
namespace_packages = False
ignore_missing_imports = True

# Untyped definitions and calls
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

# Configuring warnings
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

# Miscellaneous strictness flags
strict_equality = True

[mypy-tests.*]
ignore_errors = True
